--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <script src="js/jquery-3.2.1.slim.min.js"></script>
      <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <div class="pimg1">
+    <div class="pimg1">   <!--js link-->
 
   </div>
-
+<!-- first column-->
   <section class="section section-light">
     <h2>We are here to help</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, laudantium, quibusdam? Nobis, delectus, commodi, fugit amet tempora facere dolores nisi facilis consequatur, odio hic minima nostrum. Perferendis eos earum praesentium, blanditiis sapiente labore aliquam ipsa architecto vitae. Minima soluta temporibus voluptates inventore commodi cumque esse suscipit optio aliquam et, dolorem a cupiditate nihil fuga laboriosam fugiat placeat dignissimos! Unde eveniet placeat quisquam blanditiis voluptatem doloremque fugiat dolor repellendus ratione in. Distinctio provident dolorem modi cumque illo enim quidem tempora deserunt nostrum voluptate labore repellat quisquam quasi cum suscipit dolore ab consequuntur, ad porro earum temporibus. Laborum ad temporibus ex, omnis!
     </p>
-  </section>
+  </section>      
 
   <div class="pimg2">
     <div class="ptext">
@@ -34,7 +34,7 @@
       </span>
     </div>
   </div>
-
+<!--second column-->
   <section class="section section-dark">
     <h2>convincing the user to use this</h2>
     <p>
