--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </span>
     </div>
   </div>
-
+<!--third column-->
   <section class="section section-dark">
     <h2>SOMETHING SOMETHING</h2>
     <p>
@@ -64,6 +64,8 @@
       </span>
     </div>
   </div>
+    
+  <!-- FOOTER SECTION-->
   <div class="footer-container">
       <div class="footer">
         <div class="footer-heading footer-1">
