--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
   </head>
   <body>
-  
+  <!----------------------------JAVASCRIPT FILE----------------------->
     <script src="js/jquery-3.2.1.slim.min.js"></script>
      <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <div class="pimg1">   <!--js link-->
 
   </div>
-<!-- first column-->
+<!-----------------------------first column----------------------------->
   <section class="section section-light">
     <h2>We are here to help</h2>
     <p>
@@ -34,7 +34,7 @@
       </span>
     </div>
   </div>
-<!--second column-->
+<!-----------------------------second column----------------------------->
   <section class="section section-dark">
     <h2>convincing the user to use this</h2>
     <p>
@@ -49,7 +49,7 @@
       </span>
     </div>
   </div>
-<!--third column-->
+<!-----------------------------third column------------------------------>
   <section class="section section-dark">
     <h2>SOMETHING SOMETHING</h2>
     <p>
@@ -65,7 +65,7 @@
     </div>
   </div>
     
-  <!-- FOOTER SECTION-->
+  <!------------------------------------------------------------------- FOOTER SECTION------------------------------------------------------------------------>
   <div class="footer-container">
       <div class="footer">
         <div class="footer-heading footer-1">
